[package]
name = "d30"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
image = "0.24.5"
imageproc = { version = "0.23.0"}
rusttype = "0.9.3"
sdl2 = { version = "0.35", default-features = false, features = ["bundled"] }
